WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151942
[EFL] REGRESSION(
r193616
): WKPreferences test has been failed since
r193616
https://bugs.webkit.org/show_bug.cgi?id=151942
Summary
[EFL] REGRESSION(r193616): WKPreferences test has been failed since r193616
Gyuyoung Kim
Reported
2015-12-07 07:54:37 PST
As wkpreference settings were moved from EwkView to WKPreferenceEfl, the offline-web-application-cache feature is enabled by default when running API test. It seems this option should be enabled by MiniBrowser.
Attachments
Patch
(4.13 KB, patch)
2015-12-07 07:57 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(4.12 KB, patch)
2015-12-08 09:47 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2015-12-07 07:57:52 PST
Created
attachment 266773
[details]
Patch
Jaehun Lim
Comment 2
2015-12-07 15:11:56 PST
Comment on
attachment 266773
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266773&action=review
WKPreferences Test doesn't consider platform-specific settings. Should we change this first?
> Source/WebKit2/ChangeLog:12 > + (WebKit::WebPreferences::platformInitializeStore): Deleted.
I don't understand "Deleted". I know this line was generated by changelog script. But it's weird. It seems that the entire platformInitializeStore() is deleted.
Gyuyoung Kim
Comment 3
2015-12-08 01:38:39 PST
(In reply to
comment #2
)
> Comment on
attachment 266773
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266773&action=review
> > WKPreferences Test doesn't consider platform-specific settings. Should we > change this first?
I'm not sure whether we have to consider the platform specific settings yet. But I don't mind you try it. Anyway in this case I think it is right to set the offline-web-application-cache done by MiniBrowser.
Darin Adler
Comment 4
2015-12-08 09:25:48 PST
Comment on
attachment 266773
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266773&action=review
>> Source/WebKit2/ChangeLog:12 >> + (WebKit::WebPreferences::platformInitializeStore): Deleted. > > I don't understand "Deleted". > I know this line was generated by changelog script. But it's weird. It seems that the entire platformInitializeStore() is deleted.
This is happening because of a bug in the change log script. Please don’t leave an incorrect line like this in the change log! And lets get that bug fixed.
Gyuyoung Kim
Comment 5
2015-12-08 09:47:24 PST
Created
attachment 266899
[details]
Patch
Darin Adler
Comment 6
2015-12-08 16:18:02 PST
Comment on
attachment 266899
[details]
Patch Looks OK to me.
WebKit Commit Bot
Comment 7
2015-12-09 01:58:26 PST
Comment on
attachment 266899
[details]
Patch Clearing flags on attachment: 266899 Committed
r193812
: <
http://trac.webkit.org/changeset/193812
>
WebKit Commit Bot
Comment 8
2015-12-09 01:58:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug