[EFL] REGRESSION(r193616): WKPreferences test has been failed since r193616 https://bugs.webkit.org/show_bug.cgi?id=151942

Reviewed by Darin Adler.

Source/WebKit2:

As wkpreference settings were moved from EwkView to WKPreferenceEfl, the offline-web-application-cache feature
is enabled by default when running API test. It seems this option should be enabled by MiniBrowser.

* UIProcess/efl/WebPreferencesEfl.cpp:
(WebKit::WebPreferences::platformInitializeStore): Remove to enable web application cache feature here.

Tools:

* MiniBrowser/efl/main.c:
(window_create): Enable offline web application cache feature on MiniBrowser.
(elm_main):


Canonical link: https://commits.webkit.org/170187@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193812 268f45cc-cd09-0410-ab3c-d52691b4dbfc